tests/typing/errors/bad_poly_arity/over_application.zf

val f : pi a. a -> prop.

goal f _ _ 5.

