tests/typing/errors/bad_poly_arity/over_application.expected
File "tests/typing/errors/bad_poly_arity/over_application.zf", line 4, character 5-12:
4 | goal f _ _ 5.
         ^^^^^^^
Error This function expected at most 1 type arguments, but was here provided
      with 2 type arguments.
